🍱 Fixes stretched images, updated poke sample

--- a/styles/workPolaroid.module.scss
+++ b/styles/workPolaroid.module.scss
@@ -19,4 +19,8 @@
         color: lightgray;
         font-family: $font-body;
     }
+
+    img {
+        object-fit: contain;
+    }
 }
